force-app/main/default/objects/SOLXYZCSO001__ReportOutputObject__c/SOLXYZCSO001__ReportOutputObject__c.object-meta.xml
<CustomObject>
    <description>Report output object</description>
    <label>帳票出力オブジェクト</label>
    <nameField>
        <label>オブジェクト</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>