force-app/main/default/objects/SOLXYZCSO001__ReportOutputObject__c/fields/SOLXYZCSO001__ObjectID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>オブジェクトID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>