force-app/main/default/objects/SOLXYZCSO001__ReportOutputObject__c/fields/SOLXYZCSO001__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectName__c</fullName>
    <label>オブジェクト__</label>
    <length>255</length>
    <type>Text</type>
</CustomField>