force-app/main/default/objects/SOLXYZCSO001__ReportOutputObject__c/fields/SOLXYZCSO001__OverlayID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayID__c</fullName>
    <label>オーバレイID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>